--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,64 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# ----------------------------------------
+# 🧱 CORE NODE / DEPENDENCIES
+# ----------------------------------------
+node_modules/
+package-lock.json
+yarn.lock
 .pnpm-debug.log*
+.pnp.*
+.pnp/
 
-# env files (can opt-in for committing if needed)
+# ----------------------------------------
+# 📦 BUNDLING / BUILD OUTPUT
+# ----------------------------------------
+.next/
+out/
+build/
+dist/
+.cache/
+.eslintcache
+
+# ----------------------------------------
+# 🧪 TESTING
+# ----------------------------------------
+coverage/
+*.test.ts.snap
+jest-*.json
+*.log
+
+# ----------------------------------------
+# 📁 PROJECT CONFIG / IDES
+# ----------------------------------------
+.vscode/
+.idea/
+*.sw?
+*.sublime-workspace
+*.sublime-project
+
+# ----------------------------------------
+# 🔒 SENSITIVE FILES
+# ----------------------------------------
 .env*
+*.pem
+*.key
+*.crt
 
-# vercel
-.vercel
+# ----------------------------------------
+# 💻 OS & TEMP FILES
+# ----------------------------------------
+.DS_Store
+Thumbs.db
+*.bak
+*.tmp
 
-# typescript
-*.tsbuildinfo
+# ----------------------------------------
+# 🔧 NEXT.JS / TS
+# ----------------------------------------
 next-env.d.ts
+*.tsbuildinfo
+
+# ----------------------------------------
+# 🚀 DEPLOYMENT / HOSTING
+# ----------------------------------------
+.vercel/
+.fly/
