fix: deploy on master branch

--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -3,7 +3,7 @@ name: 🚀 Deploy to Fly
 on:
   push:
     branches:
-      - main        # or master, depending on your branch name
+      - master
 
 jobs:
   deploy:
