--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:api": "node scripts/test-api.js",
+    "ws:dev": "ts-node src/ws/server.ts",
+    "ws:start": "node dist/ws/server.js"
   },
   "dependencies": {
     "@creit.tech/stellar-wallets-kit": "^1.7.5",
@@ -20,7 +23,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "three": "^0.177.0"
+    "three": "^0.177.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -31,5 +35,8 @@
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
     "typescript": "^5"
+  },
+  "overrides": {
+    "lit": "^3.2.0"
   }
 }
