Added tokenomics page, and updated whitepaper for cody token

--- a/public/.well-known/stellar.toml
+++ b/public/.well-known/stellar.toml
@@ -35,7 +35,7 @@ issuer = "GAW55YAX46HLIDRONLOLUWP672HTFXW5WWTEI2T7OXVEFEDE5UKQDJAK"
 display_decimals = 2
 name = "CODY Token"
 desc = "The official utility token for multimedia artist Cody Cordova — used for merch, tickets, gaming rewards, and community interaction."
-conditions = "Total supply capped at 444,444,444,444 CODY. Only 1,016 tokens are currently in circulation to test market behavior and liquidity in a research-backed rollout."
+conditions = "Total supply capped at 444,444,444,444 CODY. 2,000 tokens are currently in circulation to test market behavior and liquidity in a research-backed rollout."
 image = "https://codytoken.com/cclogo.png"
 fixed_number = 444444444444
 price_api = "https://codytoken.com/api/price"
