Updated stellar.toml file to be Sep-1 compliant

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test:api": "node scripts/test-api.js",
+    "test:aqua": "node scripts/test-aqua-api.js",
     "ws:dev": "ts-node src/ws/server.ts",
     "ws:start": "node dist/ws/server.js"
   },
