--- a/public/.well-known/stellar.toml
+++ b/public/.well-known/stellar.toml
@@ -1,29 +1,35 @@
-VERSION = "2.0.0"
+VERSION = "2.7.0"
 NETWORK_PASSPHRASE = "Public Global Stellar Network ; September 2015"
-SIGNING_KEY = "GBQVKVFXHM3SLYLSIFUNDI2VALQPGOEHLDJ3Z3OLHXS4PK4GN2FSLKLY"
+
+# Dedicated signing key for domain/SEP-10
+SIGNING_KEY = "GBSP6Z42G7KWTKK2SK7CCGTNZOUC4N5OI3JJAJ35ML7DMPAVG3BRM2ZK"
 
 ACCOUNTS = [
-    "GBQVKVFXHM3SLYLSIFUNDI2VALQPGOEHLDJ3Z3OLHXS4PK4GN2FSLKLY",
-    "GBSP6Z42G7KWTKK2SK7CCGTNZOUC4N5OI3JJAJ35ML7DMPAVG3BRM2ZK",
-    "GAQSBA75ZAJT4NY6JIL7XIBRT6VVVHXDFQ3NLHS5GKTLCKLOVAGLVYQ5",
-    "GCNBBQLCRN7AHIQ72LRQU24UZNS5ZCIL7HUXPBA326UUMTRHT55OA5ET",
-    # Add the issuer for CODY to comply with SEP-1 discovery
-    "GAW55YAX46HLIDRONLOLUWP672HTFXW5WWTEI2T7OXVEFEDE5UKQDJAK"
-
+    "GBSP6Z42G7KWTKK2SK7CCGTNZOUC4N5OI3JJAJ35ML7DMPAVG3BRM2ZK", # domain/signing (low-risk)
+    "GBQVKVFXHM3SLYLSIFUNDI2VALQPGOEHLDJ3Z3OLHXS4PK4GN2FSLKLY", # distribution/treasury
+    "GAQSBA75ZAJT4NY6JIL7XIBRT6VVVHXDFQ3NLHS5GKTLCKLOVAGLVYQ5", # ops
+    "GCNBBQLCRN7AHIQ72LRQU24UZNS5ZCIL7HUXPBA326UUMTRHT55OA5ET", # ops
+    "GAW55YAX46HLIDRONLOLUWP672HTFXW5WWTEI2T7OXVEFEDE5UKQDJAK"  # CODY issuer (locked/immutable)
 ]
+
+# Uncomment when live:
+# TRANSFER_SERVER = "https://api.codytoken.com/sep24"
+# WEB_AUTH_ENDPOINT = "https://api.codytoken.com/sep10"
+# KYC_SERVER = "https://api.codytoken.com/sep12"
 
 [DOCUMENTATION]
 ORG_NAME = "Cody Cordova"
 ORG_DBA = "CODY Token"
 ORG_URL = "https://codytoken.com"
 ORG_LOGO = "https://codytoken.com/cclogo.png"
-ORG_DESCRIPTION = "CODY Token is a Stellar-based utility token created by music artist Cody Cordova. It supports merch, tickets, games, and digital community tools."
-ORG_PHYSICAL_ADDRESS = "Los Angeles, CA"
+ORG_DESCRIPTION = "CODY Token is a Stellar-based utility token by artist Cody Cordova used for merch, tickets, game rewards, and community tools."
+ORG_PHYSICAL_ADDRESS = "Los Angeles, CA, USA"
 ORG_PHONE_NUMBER = "+18186997275"
 ORG_KEYBASE = "realcodycordova"
 ORG_TWITTER = "realcodycordova"
 ORG_GITHUB = "codycordova"
 ORG_OFFICIAL_EMAIL = "mgmt@codycordova.com"
+ORG_SUPPORT_EMAIL = "support@codytoken.com"
 
 [[PRINCIPALS]]
 name = "Cody Cordova"
@@ -35,10 +41,10 @@ github = "realcodycordova"
 [[CURRENCIES]]
 code = "CODY"
 issuer = "GAW55YAX46HLIDRONLOLUWP672HTFXW5WWTEI2T7OXVEFEDE5UKQDJAK"
-display_decimals = 2
 name = "CODY Token"
+display_decimals = 2
 desc = "The official utility token for multimedia artist Cody Cordova — used for merch, tickets, gaming rewards, and community interaction."
-conditions = "Total supply capped at 444,444,444,444 CODY. 2,000 tokens are currently in circulation to test market behavior and liquidity in a research-backed rollout."
+conditions = "Total supply capped at 444,444,444,444 CODY. Circulating supply is being released gradually to study market behavior and maintain fair liquidity."
 image = "https://codytoken.com/cclogo.png"
 fixed_number = 444444444444
 is_asset_anchored = false
