--- a/public/.well-known/stellar.toml
+++ b/public/.well-known/stellar.toml
@@ -13,9 +13,9 @@ ACCOUNTS = [
 ]
 
 # Live endpoints for production:
-TRANSFER_SERVER = "https://api.codytoken.com/sep24"
-WEB_AUTH_ENDPOINT = "https://api.codytoken.com/sep10"
-KYC_SERVER = "https://api.codytoken.com/sep12"
+TRANSFER_SERVER = "https://codytoken.fly.dev/api/sep24"
+WEB_AUTH_ENDPOINT = "https://codytoken.fly.dev/api/sep10"
+KYC_SERVER = "https://codytoken.fly.dev/api/sep12"
 
 [DOCUMENTATION]
 ORG_NAME = "Cody Cordova"
@@ -24,7 +24,7 @@ ORG_URL = "https://codytoken.com"
 ORG_LOGO = "https://codytoken.com/cclogo.png"
 ORG_DESCRIPTION = "CODY Token is a Stellar-based utility token by artist Cody Cordova used for merch, tickets, game rewards, and community tools."
 ORG_PHYSICAL_ADDRESS = "Los Angeles, CA, USA"
-ORG_PHONE_NUMBER = "+1-818-699-7275"
+ORG_PHONE_NUMBER = "+18186997275"
 ORG_KEYBASE = "realcodycordova"
 ORG_TWITTER = "realcodycordova"
 ORG_GITHUB = "codycordova"
