--- a/fly.toml
+++ b/fly.toml
@@ -6,11 +6,26 @@ primary_region = "lax"
 [http_service]
 internal_port = 3000           # Next.js defaults to 3000
 force_https = true
-auto_stop_machines = "off"
-auto_start_machines = true
-min_machines_running = 1
+auto_stop_machines = true      # Enable autostop to save costs
+auto_start_machines = true     # Auto-start when traffic comes
+min_machines_running = 2       # Keep at least 2 machines running for resiliency
 
+# Enable health checks for better reliability
+[[http_service.checks]]
+grace_period = "10s"
+interval = "30s"
+method = "GET"
+path = "/"
+protocol = "http"
+restart_limit = 3
+timeout = "5s"
+
+# Optimize VM configuration for production
 [[vm]]
 cpu_kind = "shared"
 cpus = 1
 memory_mb = 1024
+
+# Enable swapping to disk for memory spikes
+[env]
+NODE_ENV = "production"
