--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "test:api": "node scripts/test-api.js",
     "test:aqua": "node scripts/test-aqua-api.js",
+    "test:sep10": "node scripts/test-sep10.js",
     "ws:dev": "ts-node src/ws/server.ts",
     "ws:start": "node dist/ws/server.js",
     "set:domain": "ts-node -P tsconfig.scripts.json scripts/setDomain.ts"
@@ -21,8 +22,10 @@
     "@react-three/postprocessing": "^3.0.4",
     "@sentry/nextjs": "^9.39.0",
     "@stellar/stellar-sdk": "^13.3.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "dotenv": "^17.2.1",
     "framer-motion": "^12.18.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "^15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
