SECURITY: Remove sensitive files from repository - Remove scripts with private keys and admin secrets - Update .gitignore to prevent future exposure - Protect domain owner secrets and admin credentials

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,16 @@ index.html
 *.key
 *.crt
 
+# Scripts with sensitive configuration
+scripts/config.ts
+scripts/set_domain_record.ts
+scripts/setDomain.ts
+
+# Any files that might contain secrets
+*secret*
+*private*
+*admin*
+
 # ----------------------------------------
 # 💻 OS & TEMP FILES
 # ----------------------------------------
