SECURITY: Remove Cursor IDE configuration from public repository - Remove .cursor/rules folder from git tracking - Update .gitignore to prevent future exposure - Keep IDE configuration private

--- a/.gitignore
+++ b/.gitignore
@@ -117,5 +117,5 @@ next-env.d.ts
 # Sentry Config File
 .env.sentry-build-plugin
 
-# Cursor Rules
-.cursor/rules/
+# Cursor IDE Configuration (should be private)
+.cursor/
