--- a/fly.toml
+++ b/fly.toml
@@ -27,5 +27,7 @@ cpus = 1
 memory_mb = 1024
 
 # Enable swapping to disk for memory spikes
-[env]
-NODE_ENV = "production"
+
+# Environment variables are now managed via Fly.io secrets
+# Run: fly secrets set JWT_SECRET="your-secret-here" DOMAIN="api.codytoken.com"
+# See: https://fly.io/docs/reference/secrets/
