--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -13,6 +13,7 @@ jobs:
     name: Fly Deploy
     runs-on: ubuntu-latest
     concurrency: deploy-group
+    timeout-minutes: 15
 
     steps:
       - name: "🔄 Checkout code"
@@ -26,7 +27,27 @@ jobs:
       - name: "⚙️ Setup flyctl"
         uses: superfly/flyctl-actions/setup-flyctl@master
 
+      - name: "🔍 Check Fly.io status"
+        run: flyctl status
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
       - name: "🚢 Run Fly.io deploy"
-        run: flyctl deploy --remote-only
+        run: |
+          for i in {1..3}; do
+            echo "Deployment attempt $i/3"
+            if flyctl deploy --remote-only --verbose; then
+              echo "Deployment successful!"
+              exit 0
+            else
+              echo "Deployment attempt $i failed"
+              if [ $i -lt 3 ]; then
+                echo "Waiting 30 seconds before retry..."
+                sleep 30
+              fi
+            fi
+          done
+          echo "All deployment attempts failed"
+          exit 1
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
