--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "license": "AGPL-3.0",
+  "engines": {
+    "node": ">=18.18 <=22"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "ci:verify": "npm run lint && npm run typecheck && npm run build",
     "security:audit": "npm audit --audit-level=moderate",
+    "security:audit:strict": "npm audit --audit-level=high",
     "security:fix": "npm audit fix --force",
     "security:update": "npm update && npm audit fix",
     "security:check": "npm audit && npm outdated"
@@ -20,30 +26,25 @@
     "@react-three/postprocessing": "^3.0.4",
     "@sentry/nextjs": "^9.39.0",
     "@stellar/stellar-sdk": "^13.3.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "autoprefixer": "^10.4.21",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.3.3",
-    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
     "three": "^0.179.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@sentry/cli": "^2.47.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.18.0",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.0",
+    "postcss": "^8.5.6",
+    
     "typescript": "^5.9.2"
-  },
-  "overrides": {
-    "lit": "^3.2.0"
   }
 }
