--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "next build && tsc -p src/ws/tsconfig.json",
+    "start": "pm2-runtime ecosystem.config.cjs",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "ci:verify": "npm run lint && npm run typecheck && npm run build",
@@ -44,7 +44,19 @@
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
     "postcss": "^8.5.6",
-    
     "typescript": "^5.9.2"
+  },
+  "overrides": {
+    "debug": "4.4.3",
+    "chalk": "5.6.2",
+    "ansi-styles": "6.2.3",
+    "ansi-regex": "6.2.2",
+    "strip-ansi": "7.1.2",
+    "supports-color": "10.2.2",
+    "wrap-ansi": "9.0.2",
+    "slice-ansi": "7.1.2",
+    "has-ansi": "6.0.2",
+    "supports-hyperlinks": "4.1.2",
+    "chalk-template": "1.1.2"
   }
 }
