--- a/package.json
+++ b/package.json
@@ -3,25 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "license": "AGPL-3.0",
+  "packageManager": "npm@11.6.0",
   "engines": {
-    "node": ">=18.18 <=22"
+    "node": ">=18.18.0"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build && tsc -p src/ws/tsconfig.json",
-    "start": "pm2-runtime ecosystem.config.cjs",
+    "start": "next start -p 3000",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "ci:verify": "npm run lint && npm run typecheck && npm run build",
+    "ci:stellar-validate": "node scripts/stellar-validate.mjs",
+    "ci:verify": "npm run lint && npm run typecheck && npm run ci:stellar-validate && npm run build",
     "security:audit": "npm audit --audit-level=moderate",
     "security:audit:strict": "npm audit --audit-level=high",
     "security:fix": "npm audit fix --force",
     "security:update": "npm update && npm audit fix",
-    "security:check": "npm audit && npm outdated"
+    "security:check": "npm audit && npm outdated",
+    "ci:install:locked": "npm ci --ignore-scripts && npm audit --audit-level=moderate"
   },
   "dependencies": {
-    "@creit.tech/stellar-wallets-kit": "^1.7.5",
-    "@react-three/drei": "^10.1.2",
+    "@creit.tech/stellar-wallets-kit": "^1.9.5",
+    "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "@sentry/nextjs": "^9.39.0",
@@ -34,8 +37,6 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@sentry/cli": "^2.47.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.18.0",
     "@types/react": "^19.1.6",
@@ -45,18 +46,5 @@
     "eslint-config-next": "^15.3.3",
     "postcss": "^8.5.6",
     "typescript": "^5.9.2"
-  },
-  "overrides": {
-    "debug": "4.4.3",
-    "chalk": "5.6.2",
-    "ansi-styles": "6.2.3",
-    "ansi-regex": "6.2.2",
-    "strip-ansi": "7.1.2",
-    "supports-color": "10.2.2",
-    "wrap-ansi": "9.0.2",
-    "slice-ansi": "7.1.2",
-    "has-ansi": "6.0.2",
-    "supports-hyperlinks": "4.1.2",
-    "chalk-template": "1.1.2"
   }
 }
