--- a/src/ws/tsconfig.json
+++ b/src/ws/tsconfig.json
@@ -2,15 +2,16 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "ES2020",
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "module": "node16",
+    "moduleResolution": "node16",
     "outDir": "../../dist/ws",
-    "rootDir": "../",
+    "rootDir": "../..",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true
   },
-  "include": ["./**/*"],
-  "exclude": ["node_modules", "dist"]
-} 
+  "include": ["./**/*.ts"],
+  "exclude": ["node_modules", "../../dist"]
+}
