Fix 3D model CSP issues, mobile styling, and Next.js warnings
- Fix CSP configuration: remove invalid prefetch-src, add frame-src for stellar.expert
- Simplify Stellar.expert widget iframe handlers to use official implementation
- Add gradient text colors to mobile hero text to match desktop
- Improve mobile layout with proper flexbox ordering and spacing
- Add data-scroll-behavior attribute to html element for Next.js compatibility
- Resolve all console CSP errors and ensure 3D model displays properly

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,12 @@ CODE_OF_CONDUCT.md
 CONTRIBUTING.md
 STELLAR_TOML_FIX.md
 docs/SECRETS_MANAGEMENT.md
+
+#python
+.venv/
+*.pyc
+*.pyo
+*.pyd
+*.pyw
+*.pyz
+*.pywz
