Simplify price API: Remove complex aggregation, use direct Horizon data
- Replace multi-source price aggregation with direct Horizon orderbook
- Remove Aqua/Soroban/oracle dependencies for cleaner implementation
- Use CODY/XLM orderbook with live XLM/USD conversion
- Simplify PriceData interface to essential fields only
- Update README to reflect new simplified architecture
- Achieve 100% confidence with official Stellar market data

--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "ci:install:locked": "npm ci --ignore-scripts && npm audit --audit-level=moderate"
   },
   "dependencies": {
-    "@creit.tech/stellar-wallets-kit": "^1.9.5",
+    "@creit.tech/stellar-wallets-kit": "^0.8.0",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "@sentry/nextjs": "^9.39.0",
     "@stellar/stellar-sdk": "^13.3.0",
+    "decimal.js": "^10.6.0",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.2.2",
     "next": "^15.3.3",
+    "node-fetch": "^2.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.179.1",
